@@ -53,6 +53,9 @@ Changes from 0.9 to 1.0-0
 16. Reimplement 'pointGrob's as SVG '<symbol>'s, referenced by '<use>'
     elements. Many more 'pch's are now animatable and drawable. (Simon)
 
+17. grobs can now be prepended with comments when exported to SVG. (Simon)
+
+
 Changes from 0.9-0 to 0.9-4
 ===========================
 
